--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: mysql2
   database: projectmeal_dev
   username: root
-  password: admin
+  password: Pa$$w0rd
   host: localhost
   port: 3306
 
